# drivers-video_streamer_vlc

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  VlcStream.cpp  VlcStream.hpp
test/: CMakeLists.txt  test_Dummy.cpp
